==> zzshm-tech/tbox/homer4SE_gb4_HJ1322/main/app/src/app_iap.c <==
#include <stdio.h>
#include <string.h>
#include <stdint.h>
#include <time.h>
#include "sdkconfig.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/queue.h"
#include "freertos/timers.h"
#include "esp_ota_ops.h"
#include "board.h"
#include "app_iap.h"
#include "app_at.h"
#include "app_lte.h"
#include "app_products.h"
#include "app_main.h"
#include "app_in.h"
#define BUFFSIZE            4128

uint8_t end_ftp_iap(void)
{
    esp_err_t err = ESP_OK;

    err = esp_ota_end(update_handle);
    if (err != ESP_OK)
    {
        if (err == ESP_ERR_OTA_VALIDATE_FAILED)
        {
            //erase_otadata_info(); //测试使用
            printf("-- Image validation failed, image is corrupted \r\n");
        }
        
        printf("-- esp_ota_end failed (%s)! \r\n", esp_err_to_name(err));
        return 2;
   }

    err = esp_ota_set_boot_partition(update_partition);
    if (err != ESP_OK)
    {
        printf("-- esp_ota_set_boot_partition failed (%s)!", esp_err_to_name(err));
        return 2;
    }

    return 0;
}

void thread_entry_iap(void *parameter)
{
    uint8_t                     step = 0;
    struct iap_ftp_str          iap_info = {0};
    struct ftp_info_str         sa = {0};
    uint8_t                     res = 0;
    QueueHandle_t  	            qu_t = NULL;          //生产队列
    struct app_main_mq_str      a_mq = {0};

    if(parameter != NULL)
    {
        iap_info = *(struct iap_ftp_str *)parameter;
        printf("\r\n-- IAP FtpUserName:%s\r\n",iap_info.user);
		printf("-- IAP FtpUserPassd:%s\r\n",iap_info.passwd);
		printf("-- IAP Server Addr:%s\r\n",iap_info.host);
		printf("-- IAP Server Port:%d\r\n",iap_info.port);
		printf("-- IAP File Name:%s\r\n",iap_info.files);	
    }

    memset((uint8_t *)&sa,'\0',sizeof(sa));

    file_total_size = 0;
    read_offset = 0;
    file_size = 0;
    update_partition = NULL;
    update_handle = 0;

    iap_state = 1;

    for(;;)
    {
        if(read_lte_net_init_state() == 0)
        {
            vTaskDelay(100);
			vTaskDelete(NULL);
        }

        //printf("-- run step:%d\r\n",step);
        switch(step)
        {
            case 0:                 //配置FTP相关
                memcpy(sa.host,iap_info.host,sizeof(iap_info.host));   //主机地址
                sa.port = iap_info.port;                                        //
                memcpy(sa.user,iap_info.user,sizeof(iap_info.user));            //
                memcpy(sa.passwd,iap_info.passwd,sizeof(iap_info.passwd));      //
                
                if(at_config_ftp_account(&sa) == 0)
                {
                    printf("-- config ftp account ok......\r\n");
                }
                else
                {
                    step = 5;
                }

                if(at_config_ftp_transmode(1) == 0)
                {
                    printf("-- config ftp transmode ok......\r\n");
                }
                else
                {
                    step = 5;
                }

                if(at_config_ftp_rsptimeout(90) == 0)
                {
                    printf("-- config ftp rsptimeout ok......\r\n");
                }
                else
                {
                    step = 5;
                }
                 
                if(at_config_ftp_file_type(0) == 0)
                {
                    printf("-- config ftp file_type ok......\r\n");
                    step++;
                }
                else
                {
                    step = 5;

                }
                break;
            case 1:                 //下载FTP文件
                res = start_ftp_iap();
                if(res == 0)
                {
                    printf("-- start ftp iap ok.....\r\n");
                    read_offset = 0;
                    step++;
                }
                else
                {
                    step = 5;
                }
                break;

            case 2:   //链接 FTP服务器
                if(at_get_ftp_link_state() == 1)
				{	
					if(at_close_ftp_connect() == 0)
						printf("-- close ftp server connect......ok\r\n");
				}

                if(at_creat_ftp_connect(&sa) == 0)
                {
                    printf("-- Creat ftp connect ok......\r\n");
                }
                else
                {
                    printf("-- Creat ftp connect Fail......\r\n");
                    step = 5;
                    break;
                }

                    /*获取文件大小*/
                if((file_total_size = at_get_ftp_files_size(iap_info.files)) == 0)
                {

                    printf("-- ERR: func:%s, line(%d)\r\n", __FUNCTION__, __LINE__);
                    step = 5;
                    break;
                }
                

                printf("-- OTA file total size = %d\r\n", file_total_size);
                
                if (file_total_size <= 0)
                {
                    printf("-- ERR: func:%s, line(%d)\r\n", __FUNCTION__, __LINE__);
                   step = 5;
                   break;
                }
                file_size = file_total_size - read_offset;
                if(at_download_ftp_files(iap_info.files,read_offset) == 0)
				{
					printf("-- DownLoad Ftp Files Ok ....  %d\r\n",read_offset);
				}
				else
				{
					step = 0;   //下载文件失败
					break;;
				}	
                step++;

                break;
            case 3:    //下载FTP文件并写入OTA
                res = down_and_wirte_esp_ota(iap_info.files);
                if(res == 0)
                {
                    printf("-- down load iap files ok.....\r\n");
                    step++;
                }
                else if(res == 1)   //下载过程中断开，可以重新链接
                {
                    printf("-- ftp down disconnect......\r\n");
                    if(at_close_ftp_connect() == 0)
                        printf("-- close ftp connect......ok\r\n");
                     
                    step = 2;   //重新链接
                    break; 
                }
                else
                {
                    step = 5;   //升级失败
                }
                break;
            case 4:    //结束FTP升级
                 if(end_ftp_iap() == 0)
                {
                    printf("-- IAP function .............. OK\r\n");
                }
                else
                {
                    printf("-- IAP function .............. Fail\r\n");
                }
                 if(at_close_ftp_connect() == 0)
                    printf("-- close ftp connect......ok\r\n");
                
                printf("-- Reset be from fpt iap ...\r\n");
                a_mq.state = 1;

                qu_t =  get_app_main_queue();
                if(qu_t != NULL)
                {
                    xQueueSend(qu_t,&a_mq,sizeof(struct app_main_mq_str));
                }
                vTaskDelay(1000);
                step++;
                break;
            case 5:
                step = 0;
                 if(at_close_ftp_connect() == 0)
                    printf("-- close ftp connect......ok\r\n");
                printf("-- Del thread entry iap\r\n");
                iap_state = 0;
			    vTaskDelete(NULL);

                break;
            default:
                step = 0;

                break;
        }
    }
}
