==> zzshm-tech/tbox/SM_T_GB4_STM32F4_HJ1322/bsp/stm32f4xx-HAL/applications/app_iap.c <==
#include <stdio.h>
#include <string.h>
#include <stdint.h>
#include "pro_data.h"
#include <rtthread.h>
#include "board.h"
#include "drv_mem.h"
#include "drv_can.h"
#include "pro_data.h"
#include "md5_code.h"
#include "app_can_recv.h"
#include "app_iap.h"
#include "app_fifo.h"
#include "app_gb4.h"
#include "app_packet.h"
#include "app_lte.h"
#include "app_at.h"
#define BUFFSIZE            4224
#define READ_IAP_SIZE				4096

uint8_t end_ftp_iap(void)
{
	uint32_t 			size;
	uint32_t	 		i;
	uint8_t	 			LSB;				
	uint16_t 			CRC16 = 0xFFFF;
	uint8_t 			*start;
	uint32_t 			read_size = 0;
	
	rt_device_t 	inner_mem_dev = RT_NULL;
	
	rt_kprintf("-- Start ota data verfy ... %d\r\n",file_total_size);		//开始校验
	
	inner_mem_dev = rt_device_find("inner_mem");
	rt_device_open(inner_mem_dev,RT_DEVICE_OFLAG_RDWR);
	
	file_size = file_total_size;
	read_offset = 0;
	
	while(file_size > 0)
  {
		if(file_size > 2048)
    {
				read_size = 2048;
		}
    else
    {
				read_size = file_size;
    }
		rt_device_read(inner_mem_dev,ADDR_APP_BACK + read_offset,(uint8_t *)local_data,read_size);
		
		start = local_data;
		size = read_size;
		
		while(size > 0) 
		{
			*(uint8_t *)&CRC16 ^= *start;
			for (i = 0; i < 8; i++) 
			{
				LSB = (unsigned char)CRC16 & 0x01 ? 1 : 0;
				CRC16 >>= 1;
				if(LSB) 
					CRC16 ^= 0xA001;
			}
			start++;
			size--;
		}
		read_offset += read_size;
		file_size -= read_size;
	}
	
	rt_kprintf("-- The ota data verfy value:0x%X,0x%X\r\n",CRC16,file_crc_value);
  
	if(file_crc_value != CRC16)
	{
		rt_kprintf("-- The OTA Data Verfy Fail.....\r\n");
		write_iap_upgrade_info('R');
		return 1;
	}
	
	write_iap_upgrade_info('Y');
	
	return 0;
}

void thread_entry_iap(void *parameter)
{	
	uint8_t 								step = 0;
  struct ftp_info_str     sa = {0};
	rt_thread_t 						tmp_tid = NULL;
	uint8_t                 res = 0;
	
	if(parameter != NULL)
  {
		iap_info = *(struct iap_ftp_str *)parameter;
    rt_kprintf("\r\n-- IAP FtpUserName:%s\r\n",iap_info.user);
		rt_kprintf("-- IAP FtpUserPassd:%s\r\n",iap_info.passwd);
		rt_kprintf("-- IAP Server Addr:%s\r\n",iap_info.host);
		rt_kprintf("-- IAP Server Port:%d\r\n",iap_info.port);
		rt_kprintf("-- IAP File Name:%s\r\n",iap_info.files);	
  }
	
	file_total_size = 0;
  read_offset = 0;
  file_size = 0;
	iap_state = 1;
  memset((uint8_t *)&sa,'\0',sizeof(sa));
	for(;;)
	{
		if(read_lte_net_init_state() == 0)
    {
			rt_thread_delay(100);
			
			tmp_tid = rt_thread_self();   //
			if(tmp_tid != NULL)
			{
				
				rt_kprintf("-- del thread_entry_iap 2.....\r\n");
				rt_thread_delete(tmp_tid);    //删除任务自身
				rt_thread_yield();
				file_total_size = 0;     //文件总长度
				file_crc_value = 0;      //文件CRC校验值
				read_offset = 0;         //偏移量
				file_size = 0;           //要升级的文件大小
				iap_num = 0;             //链接FPT的次数
				iap_state = 0;           //IAP线程状态0:未升级；1：升级中
			}
			continue;
    }

		switch(step)
		{
				case 0:
					memcpy(sa.host,iap_info.host,sizeof(iap_info.host));   //主机地址
          sa.port = iap_info.port;
          memcpy(sa.user,iap_info.user,sizeof(iap_info.user));
          memcpy(sa.passwd,iap_info.passwd,sizeof(iap_info.passwd));
                
          if(at_config_ftp_account(&sa) == 0)  //配置FTP服务器用户名和密码,可以多次配置
          {
						 rt_kprintf("-- config ftp account ok......\r\n");
          }
          else
          {
             step = 5;
          }

          if(at_config_ftp_transmode(1) == 0)    //配置传输模式
          {
              rt_kprintf("-- config ftp transmode ok......\r\n");
          }
          else
          {
              step = 5;
          }

          if(at_config_ftp_rsptimeout(20) == 0)   //
          {
              rt_kprintf("-- config ftp rsptimeout ok......\r\n");
          }
          else
          {
              step = 5;
          }
                 
          if(at_config_ftp_file_type(0) == 0)
          {
              rt_kprintf("-- config ftp file_type ok......\r\n");
              step++;
          }
          else
          {
             step = 5;
          }
          break;                                 //直接重启
				
				case 1:
					if(erase_back_app_setcors() == 0)
          {
						rt_kprintf("-- start ftp iap ok.....\r\n");
            step++;
          }
          else
          {
						step = 5;
          }
          break;
				case 2:
					if(iap_num++ > 2)
          {
             step = 5;
             break;
          }
          if(at_creat_ftp_connect(&sa) == 0)
          {
               printf("-- Creat ftp connect ok......(1)\r\n");
          }
          else
          {
               printf("-- Creat ftp connect Fail......\r\n");
               step = 5;
               break;
          }
					/*获取文件大小*/
          if((file_total_size = at_get_ftp_files_size(iap_info.files)) == 0)
          {
						rt_kprintf("-- ERR: func:%s, line(%d)\r\n", __FUNCTION__, __LINE__);
            step = 5;
                    
						break;
          }
          rt_kprintf("-- OTA file total size = %d\r\n", file_total_size);
          if(file_total_size <= 0 && file_total_size >= (224 * 1024))
          {
            rt_kprintf("-- ERR: func:%s, line(%d)\r\n", __FUNCTION__, __LINE__);
            step = 5;
            break;
          }
          file_size = file_total_size - read_offset;    //   (???)
          step++;
					rt_kprintf("-- Start Down and write flash ota... %d\r\n",file_size);
          break;		
				case 3:
					 res = down_and_wirte_flash_ota(iap_info.files);
           if(res == 0)
           {
               rt_kprintf("-- down load iap files ok.....\r\n");
               step++;
           }
           else if(res == 1)   //下载过程中断开，可以重新链接
           {
						 rt_kprintf("-- ftp down disconnect......\r\n");
             if(at_close_ftp_connect() == 0)
						 {
							 rt_kprintf("-- close ftp connect......ok\r\n");
						 }
             else
						 {
							 rt_kprintf("-- close ftp connect......fail\r\n");
						 }
             
						 step = 2;   //重新链接
						 rt_thread_delay(100);
             break; 
           }
           else
           {
              step = 5;   //升级失败
           }
					 break;
				case 4:            //结束升级
					if(end_ftp_iap_md5() == 0)
					{
						rt_kprintf("-- The End Ftp Iap OK....\r\n");
					}
					else
					{
						rt_kprintf("-- The End Ftp Iap Fail...\r\n");
					}
          if(at_close_ftp_connect() == 0)
             printf("-- close ftp connect......ok\r\n");
          printf("-- Reset be from fpt iap ...\r\n");
					
					rt_reboot_sys();
          step = 0;
					break;
				case 5:          //升级失败
					write_iap_upgrade_info('R');
					rt_reboot_sys();
					break;
				default:
					break;
			}
	}	
}
